force-app/main/default/objects/Deployment_Log__c/Deployment_Log__c.object-meta.xml
<CustomObject>
    <label>Deployment_Log</label>
    <nameField>
        <label>Deployment_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment_Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>