force-app/main/default/objects/Deployment_Log__c/fields/Deployment_Request__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Request</label>
    <referenceTo>Deployment_Request__c</referenceTo>
    <relationshipLabel>Deployment_Log</relationshipLabel>
    <relationshipName>Deployment_Log</relationshipName>
    <type>Lookup</type>
</CustomField>